add: swag documentation added to new methods
