# internal/controller/helper.go
@@ -1,6 +1,8 @@
 package controller
 
 import (
+	"Lesson15/internal/config"
+	"Lesson15/pkg"
 	"errors"
 	"github.com/gin-gonic/gin"
 	"strings"
@@ -22,4 +24,25 @@ func (ctrl *EmployeeController) extractTokenFromHeader(c *gin.Context, headerKey
 		return "", errors.New("empty token")
 	}
 	return headerParts[1], nil
+}
+
+func (ctrl *EmployeeController) generateNewTokenPair(userID int) (string, string, error) {
+	// генерация токенов
+	cfg := config.LoadConfig()
+	accessToken, err := pkg.GenerateToken(
+		userID,
+		cfg.AuthConfig.AccessTokenTTLMinutes,
+		false)
+	if err != nil {
+		return "", "", err
+	}
+
+	refreshToken, err := pkg.GenerateToken(
+		userID,
+		cfg.AuthConfig.RefreshTokenTTLDays,
+		true)
+	if err != nil {
+		return "", "", err
+	}
+	return accessToken, refreshToken, nil
 }
